Added new minions architecture